--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "angular-socket-io": "~0.7.0",
     "angular-ui-router": "~0.2.15",
     "angular-validation-match": "~1.5.2",
-    "angular-gettext": "^2.3.4"
+    "angular-gettext": "^2.3.4",
+    "noty": "^2.3.8",
+    "bowser": "^1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
